world + witnet wip

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,10 @@ RPC_BNB=https://binance.llamarpc.com
 RPC_SCROLL=https://rpc.scroll.io
 RPC_AMOY="https://rpc-amoy.polygon.technology"
 
+# World RPC URLs
+RPC_WORLD=https://worldchain-mainnet.g.alchemy.com/public
+RPC_WORLD_SEPOLIA=https://worldchain-sepolia.g.alchemy.com/public
+
 # Etherscan api keys for verification & download utils
 ETHERSCAN_API_KEY_MAINNET=
 ETHERSCAN_API_KEY_POLYGON=
@@ -37,6 +41,12 @@ ETHERSCAN_API_KEY_GNOSIS=
 ETHERSCAN_API_KEY_BNB=
 ETHERSCAN_API_KEY_SCROLL=
 ETHERSCAN_API_KEY_CELO=
+
+ETHERSCAN_API_KEY_BASE_SEPOLIA=
+
+# World Etherscan API Keys
+ETHERSCAN_API_KEY_WORLD=
+ETHERSCAN_API_KEY_WORLD_SEPOLIA=
 
 # Simulation/fork creation
 TENDERLY_ACCESS_TOKEN=
