--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aave-v3-origin",
   "version": "1.0.0",
   "scripts": {
+    "calculate": "node --loader ts-node/esm -r dotenv/config calculate-apy.ts",
     "lint": "prettier . --check",
     "lint:fix": "prettier . --write"
   },
@@ -19,10 +20,13 @@
   "type": "module",
   "devDependencies": {
     "prettier": "^2.8.3",
-    "prettier-plugin-solidity": "^1.1.1"
+    "prettier-plugin-solidity": "^1.1.1",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@bgd-labs/aave-cli": "^1.1.4",
-    "catapulta-verify": "^1.1.1"
+    "catapulta-verify": "^1.1.1",
+    "dotenv": "^16.4.7",
+    "viem": "^2.21.54"
   }
 }
